--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
         "codeigniter4/shield": "^1.1",
-        "fabianwennink/iconcaptcha": "^4.0"
+        "fabianwennink/iconcaptcha": "^4.0",
+        "mahtab2003/faucetpay": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
