remove default email credentials

--- a/env.example
+++ b/env.example
@@ -85,7 +85,7 @@ database.default.port = 3306
 email.fromEmail = "youremail@example.com"
 email.fromName = "JustFaucet"
 email.SMTPHost = "smtp.example.com"
-email.SMTPUser = "your@example.com"
+email.SMTPUser = "youremail@example.com"
 email.SMTPPass = ""
 email.SMTPPort = 465
 email.SMTPCrypto = "ssl"
