--- a/env.example
+++ b/env.example
@@ -126,11 +126,10 @@ VPNAPI_KEY = "YOUR VPN API KEY"
 IPHUB_KEY = "YOUR IPHUB KEY"
 #--------------------------------------------------------------------
 
-# hCAPTCHA
+# CAPTCHA Settings
+# Using mobicms/captcha library - no API keys needed
 
 #--------------------------------------------------------------------
-HCAPTCHA_SECRET_KEY = "YOUR HCAPTCHA SECRET KEY"
-HCAPTCHA_SITE_KEY = "YOUR HCAPTCHA SITE KEY"
 
 #--------------------------------------------------------------------
 
